# manipulator_parameter_identification

./: README.md
09-URDF/: .gitignore  CMakeLists.txt  README.md
09-URDF/3DOF-WIP/: 3dof.cpp  3dof.urdf  3dof_old.cpp  CMakeLists.txt
09-URDF/7DOFArm/: CMakeLists.txt  singleArm.cpp  singlearm.urdf  singlearmOld.urdf
09-URDF/7DOFArm/DAE/: L1.dae  L2.dae  L4.dae  L6.dae
09-URDF/Krang/: CMakeLists.txt  Krang.urdf  KrangBaseSlopedCollision.urdf  KrangCollision.urdf  KrangOld.urdf  KrangVisualCollision.urdf  simKrang.cpp
09-URDF/KrangFixedWheels/: CMakeLists.txt  Controller.cpp  Controller.hpp  Controller_backup.cpp  Main.cpp  MyWindow.cpp  krang_fixed_wheel.urdf  krang_fixed_wheel_backup.urdf
09-URDF/KrangWaist/: krang_fixed_base.urdf
09-URDF/scenes/: 00-World-Test.urdf  01-World-Robot.urdf  01-World-RobotNew.urdf  01-World-RobotSchunkGrippers.urdf  02-World-JInv.urdf  03-World-IK.urdf  04-World-Liberty.urdf  05-World-Krang-Teleop.urdf  05-World-Teleop.urdf  BaseLink.dae  BaseLink_Short.dae  Krang.urdf  KrangBlocks.urdf  KrangBlocksNew.urdf  KrangBlocksOld.urdf  KrangBlocksSchunkGrippers.urdf  KrangNewTemp.urdf  L7.dae  base_slopedCollisionBox.dae  blueCubeObject.urdf  blueRect.urdf  box.urdf  boxSmall.urdf  bracket.dae  cup.urdf  fulcrum.urdf  greenArrow.urdf  lever.urdf  obstacle.urdf  plane.urdf  redPoint.urdf  spine.dae  table.urdf  testObject.urdf  tray.urdf  tray_nolegs.urdf  valve.urdf
09-URDF/scenes/Base/: + Battery strap.dae  + Battery tray.dae  + Battery.dae  + Caster.dae  + Computer - front bracket.dae  + Computer - rear bracket.dae  + Computer.dae  + Gearbox.dae  + Lower spine.dae  + Motor end cap.dae  + Name plate.dae  + Spine-waist plate L-bracket - left.dae  + Spine-waist plate L-bracket - right.dae  + Spine-waist plate gusset.dae  + Tube-spine L-bracket.dae  + Tube-spine bracket.dae  + Waist bracket.dae  + Waist plate.dae  + Wheel tube.dae  + imu.dae  newwheel.dae  newwheel.dae1  newwheel_super_res.dae  oldbluebox.dae  oldwheel.dae
09-URDF/scenes/Bracket/: Bottom.dae  Front.dae  Left.dae  Rear.dae  Right.dae  Top.dae
09-URDF/scenes/Kinect/: Base bottom.dae  Base top.dae  Kinect.dae  KinectAssembly.dae  README.txt
09-URDF/scenes/Schunk/: L0.dae  L3.dae  L5.dae  L7-original.dae  L7-withFTextension.dae  L7.dae  L7Gripper.dae  L7_EFF.dae  PRL 120 Rotor.dae  ft.dae  gripper.blend  gripper.dae  gripperPlate.dae  schunkGripper.3ds
09-URDF/scenes/Spine/: End cap.dae  Spacer.dae  Tube.dae  Waist plate - left.dae  Waist plate - right.dae
09-URDF/scenes/objects/: blueCube.dae  blueRect.dae  box.SLDPRT  box.dae  boxSmall.blend  boxSmall.blend1  boxSmall.dae  cup.dae  fulcrum.SLDPRT  fulcrum.dae  greenArrow.blend  greenArrow.blend1  greenArrow.dae  lever.dae  obstacle.dae  plane.dae  redCube.dae  table.dae  tray.dae  valve.SLDPRT  valve.dae
20-ParametricIdentification-7DOF/: .gitignore  Get_phi_ArmDynamics.cpp  README.md
20-ParametricIdentification-7DOF/data/test1/input/: dataCur_T_NF2.txt  dataDDotQ_T_NF2.txt  dataDotQ_T_NF2.txt  dataQ_T_NF2.txt
20-ParametricIdentification-7DOF/data/train1/input/: CMakeLists.txt  cur_filt.txt  dataTimeStamp.txt  ddq_filt.txt  dq_filt.txt  q_filt.txt
20-ParametricIdentification-7DOF/testOutput/: betaparameters.txt  dataTorque.txt  dataTorque_RHS.txt  phibeta_RHS.txt
20-ParametricIdentification-7DOF/trainOutput/: betaparameters.txt  dataTorque.txt  dataTorque_RHS.txt  phibeta_RHS.txt
29-ArmDataCollection/: CMakeLists.txt  currentControl.cpp  singlearm
29-ArmDataCollection/testData/: dataCur.txt  dataDDotQ.txt  dataDQref.txt  dataDotQ.txt  dataDotQ_NF.txt  dataQ.txt  dataQref.txt  dataTimeStamp.txt  lowPass_filter.py
29-ArmDataCollection/trainData/: currCompare.py  dataCur.txt  dataDDotQ.txt  dataDQref.txt  dataDotQ.txt  dataDotQ_NF.txt  dataQ.txt  dataQref.txt  dataTimeStamp.txt
trainOutput/: betaparameters.txt  phibeta_RHS.txt
(+10 files in other folders)
